--- a/bower.json
+++ b/bower.json
@@ -40,9 +40,11 @@
     "rivets": "^0.9.6",
     "gsap": "^1.19.0",
     "barba.js": "luruke/barba.js#^1.0.0",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jumplink-components": "JumpLinkNetwork/jumplink-components"
   },
   "resolutions": {
-    "jquery": "1.9.1 - 3"
+    "jquery": "1.9.1 - 3",
+    "bootstrap-backward": "v4-0-0-alpha-5-scss-backward"
   }
 }
