fix font, login / register page

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -15,13 +15,13 @@
     "bs4-gray-light": "#636c72",
     "bs4-gray-lighter": "#dcdcdc",
     "bs4-gray-lightest": "#f7f7f9",
-    "bs4-brand-primary": "$blue",
+    "bs4-brand-primary": "$black",
     "bs4-brand-success": "$green",
     "bs4-brand-info": "$teal",
     "bs4-brand-warning": "$orange",
     "bs4-brand-danger": "$red",
     "bs4-brand-inverse": "$gray-dark",
-    "bs4-enable-rounded": true,
+    "bs4-enable-rounded": false,
     "bs4-enable-shadows": false,
     "bs4-enable-gradients": false,
     "bs4-enable-transitions": true,
@@ -78,7 +78,7 @@
     "bs4-font-size-lg": "1.25rem",
     "bs4-font-size-sm": ".875rem",
     "bs4-font-size-xs": ".75rem",
-    "bs4-font-weight-normal": "normal",
+    "bs4-font-weight-normal": "300",
     "bs4-font-weight-bold": "bold",
     "bs4-font-weight-base": "$font-weight-normal",
     "bs4-line-height-base": "1.5",
@@ -95,11 +95,11 @@
     "bs4-headings-color": "inherit",
     "bs4-display1-size": "6rem",
     "bs4-display2-size": "5.5rem",
-    "bs4-display3-size": "4.5rem",
-    "bs4-display4-size": "3.5rem",
+    "bs4-display3-size": "1.5rem",
+    "bs4-display4-size": "1.5rem",
     "bs4-display1-weight": "300",
     "bs4-display2-weight": "300",
-    "bs4-display3-weight": "300",
+    "bs4-display3-weight": "400",
     "bs4-display4-weight": "300",
     "bs4-display-line-height": "$headings-line-height",
     "bs4-lead-font-size": "1.25rem",
@@ -142,8 +142,8 @@
     "bs4-table-head-color": "$gray",
     "bs4-table-border-width": "$border-width",
     "bs4-table-border-color": "$gray-lighter",
-    "bs4-btn-padding-x": "1rem",
-    "bs4-btn-padding-y": ".5rem",
+    "bs4-btn-padding-x": "1.5rem",
+    "bs4-btn-padding-y": ".4rem",
     "bs4-btn-line-height": "1.25",
     "bs4-btn-font-weight": "$font-weight-normal",
     "bs4-btn-box-shadow": "inset 0 1px 0 rgba($white,.15), 0 1px 1px rgba($black,.075)",
@@ -536,8 +536,83 @@
     "bs4-pre-color": "$gray-dark",
     "bs4-pre-border-color": "#ccc",
     "bs4-pre-scrollable-max-height": "340px",
-    "collections_per_page": 3,
+    "collections_per_page": 50,
     "collections_aspect_ratio": "ratio-1-2",
+    "about-us_carousel_item_1_active": true,
+    "about-us_carousel_item_1_href": "",
+    "about-us_carousel_item_1_title": "",
+    "about-us_carousel_item_1_text": "",
+    "about-us_carousel_item_1_text_position": "bottom right",
+    "about-us_carousel_item_1_text_color": "black",
+    "about-us_carousel_item_2_active": false,
+    "about-us_carousel_item_2_href": "",
+    "about-us_carousel_item_2_title": "Ebesidii sedi",
+    "about-us_carousel_item_2_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
+    "about-us_carousel_item_2_text_position": "bottom right",
+    "about-us_carousel_item_2_text_color": "black",
+    "about-us_carousel_item_3_active": true,
+    "about-us_carousel_item_3_href": "",
+    "about-us_carousel_item_3_title": "",
+    "about-us_carousel_item_3_text": "",
+    "about-us_carousel_item_3_text_position": "bottom right",
+    "about-us_carousel_item_3_text_color": "black",
+    "about-us_carousel_item_4_active": false,
+    "about-us_carousel_item_4_href": "",
+    "about-us_carousel_item_4_title": "Ebesidii sedi",
+    "about-us_carousel_item_4_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
+    "about-us_carousel_item_4_text_position": "bottom right",
+    "about-us_carousel_item_4_text_color": "black",
+    "about-us_carousel_item_5_active": false,
+    "about-us_carousel_item_5_href": "",
+    "about-us_carousel_item_5_title": "Ebesidii sedi",
+    "about-us_carousel_item_5_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
+    "about-us_carousel_item_5_text_position": "bottom right",
+    "about-us_carousel_item_5_text_color": "black",
+    "about-us_carousel_item_6_active": false,
+    "about-us_carousel_item_6_href": "",
+    "about-us_carousel_item_6_title": "Ebesidii sedi",
+    "about-us_carousel_item_6_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
+    "about-us_carousel_item_6_text_position": "bottom right",
+    "about-us_carousel_item_6_text_color": "black",
+    "about-us_carousel_with_aspect_ratio": true,
+    "about-us_carousel_aspect_ratio": "ratio-3-10",
+    "about-us_carousel_accessibility": true,
+    "about-us_carousel_adaptiveHeight": false,
+    "about-us_carousel_autoplay": false,
+    "about-us_carousel_autoplaySpeed": 3000,
+    "about-us_carousel_arrows": true,
+    "about-us_carousel_centerMode": false,
+    "about-us_carousel_centerPadding": "50px",
+    "about-us_carousel_cssEase": "linear",
+    "about-us_carousel_dots": false,
+    "about-us_carousel_draggable": true,
+    "about-us_carousel_fade": false,
+    "about-us_carousel_focusOnSelect": false,
+    "about-us_carousel_easing": "linear",
+    "about-us_carousel_edgeFriction": "0.15",
+    "about-us_carousel_infinite": true,
+    "about-us_carousel_initialSlide": 0,
+    "about-us_carousel_lazyLoad": "ondemand",
+    "about-us_carousel_mobileFirst": false,
+    "about-us_carousel_pauseOnFocus": true,
+    "about-us_carousel_pauseOnHover": true,
+    "about-us_carousel_pauseOnDotsHover": false,
+    "about-us_carousel_rows": 1,
+    "about-us_carousel_slidesPerRow": 1,
+    "about-us_carousel_slidesToShow": 1,
+    "about-us_carousel_slidesToScroll": 1,
+    "about-us_carousel_speed": 300,
+    "about-us_carousel_swipe": true,
+    "about-us_carousel_swipeToSlide": false,
+    "about-us_carousel_touchMove": true,
+    "about-us_carousel_touchThreshold": 5,
+    "about-us_carousel_useCSS": true,
+    "about-us_carousel_useTransform": true,
+    "about-us_carousel_variableWidth": false,
+    "about-us_carousel_vertical": false,
+    "about-us_carousel_verticalSwiping": false,
+    "about-us_carousel_rtl": false,
+    "about-us_carousel_waitForAnimate": false,
     "checkout_header_image": "",
     "checkout_logo_image": "",
     "checkout_logo_position": "left",
