--- a/bower.json
+++ b/bower.json
@@ -42,7 +42,8 @@
     "barba.js": "luruke/barba.js#^1.0.0",
     "jquery": "^3.1.1",
     "jumplink-components": "JumpLinkNetwork/jumplink-components",
-    "jquery.transit": "^0.9.12"
+    "jquery.transit": "^0.9.12",
+    "instafeed.js": "^1.4.1"
   },
   "resolutions": {
     "jquery": "1.9.1 - 3",
