online showroom dropdown

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -3,7 +3,7 @@
     "bs4-white": "#fff",
     "bs4-black": "#000",
     "bs4-red": "#d9534f",
-    "bs4-orange": "#f0ad4e",
+    "bs4-orange": "#8c6d41",
     "bs4-yellow": "#ffd500",
     "bs4-green": "#5cb85c",
     "bs4-blue": "#0275d8",
@@ -536,8 +536,16 @@
     "bs4-pre-color": "$gray-dark",
     "bs4-pre-border-color": "#ccc",
     "bs4-pre-scrollable-max-height": "340px",
-    "collections_per_page": 50,
-    "collections_aspect_ratio": "ratio-1-2",
+    "home_instafeed_clientId": "31835d3fabe742fc8227998a8f924890",
+    "home_instafeed_accessToken": "1752935354.31835d3.6f1bbea5f97a4ea59b6b92e3515874b2",
+    "home_instafeed_get": "user",
+    "home_instafeed_tagName": "",
+    "home_instafeed_locationId": "",
+    "home_instafeed_userId": "1752935354",
+    "home_instafeed_resolution": "standard_resolution",
+    "home_instafeed_limit": 3,
+    "home_instafeed_sortBy": "none",
+    "home_instagram_follow_link": "https:\/\/www.instagram.com\/studiopezzetta\/",
     "about-us_carousel_item_1_active": true,
     "about-us_carousel_item_1_href": "",
     "about-us_carousel_item_1_title": "",
@@ -613,6 +621,14 @@
     "about-us_carousel_verticalSwiping": false,
     "about-us_carousel_rtl": false,
     "about-us_carousel_waitForAnimate": false,
+    "collections_per_page": 50,
+    "collections_aspect_ratio": "ratio-1-2",
+    "products_per_page": 50,
+    "products_aspect_ratio": "ratio-1-2",
+    "products_show_vendor": true,
+    "products_show_title": false,
+    "products_show_price": false,
+    "apps_powertools_filter_menu": false,
     "checkout_header_image": "",
     "checkout_logo_image": "",
     "checkout_logo_position": "left",
