product breadcrumbs and product slide buttons

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -39,8 +39,8 @@
     "bs4-spacers-y-2": "($spacer-y * .5)",
     "bs4-spacers-x-3": "($spacer-x)",
     "bs4-spacers-y-3": "($spacer-y)",
-    "bs4-spacers-x-4": "($spacer-x * 1.5)",
-    "bs4-spacers-y-4": "($spacer-y * 1.5)",
+    "bs4-spacers-x-4": "($spacer-x * 2)",
+    "bs4-spacers-y-4": "($spacer-y * 2)",
     "bs4-spacers-x-5": "($spacer-x * 3)",
     "bs4-spacers-y-5": "($spacer-y * 3)",
     "bs4-border-width": "1px",
@@ -344,19 +344,19 @@
     "bs4-pagination-padding-x-lg": "1.5rem",
     "bs4-pagination-padding-y-lg": ".75rem",
     "bs4-pagination-line-height": "1.25",
-    "bs4-pagination-color": "$link-color",
+    "bs4-pagination-color": "$gray",
     "bs4-pagination-bg": "$white",
-    "bs4-pagination-border-width": "$border-width",
+    "bs4-pagination-border-width": "0",
     "bs4-pagination-border-color": "#ddd",
-    "bs4-pagination-hover-color": "$link-hover-color",
-    "bs4-pagination-hover-bg": "$gray-lighter",
+    "bs4-pagination-hover-color": "$black",
+    "bs4-pagination-hover-bg": "$white",
     "bs4-pagination-hover-border": "#ddd",
     "bs4-pagination-active-color": "$white",
     "bs4-pagination-active-bg": "$brand-primary",
     "bs4-pagination-active-border": "$brand-primary",
     "bs4-pagination-disabled-color": "$gray-light",
     "bs4-pagination-disabled-bg": "$white",
-    "bs4-pagination-disabled-border": "#ddd",
+    "bs4-pagination-disabled-border": "#dddddd",
     "bs4-jumbotron-padding": "2rem",
     "bs4-jumbotron-bg": "$gray-lighter",
     "bs4-state-success-text": "#3c763d",
@@ -503,7 +503,7 @@
     "bs4-breadcrumb-padding-y": ".75rem",
     "bs4-breadcrumb-padding-x": "1rem",
     "bs4-breadcrumb-item-padding": ".5rem",
-    "bs4-breadcrumb-bg": "$gray-lighter",
+    "bs4-breadcrumb-bg": "$white",
     "bs4-breadcrumb-divider-color": "$gray-light",
     "bs4-breadcrumb-active-color": "$gray-light",
     "bs4-breadcrumb-divider": "\"\/\"",
@@ -628,7 +628,15 @@
     "products_show_vendor": true,
     "products_show_title": false,
     "products_show_price": false,
+    "apps_jumplink_product_videos": false,
+    "apps_jumplink_exclusive_collections": true,
     "apps_powertools_filter_menu": false,
+    "apps_bold_loyalty_points": false,
+    "apps_zapiet_store_pickup_and_delivery": false,
+    "apps_wishlist_king_by_appmate": false,
+    "show_account_message": true,
+    "account_message_title": "Welcome to your account!",
+    "account_message": "Here you will find the details of your orders, your deposited addresses and further information. We hope you enjoy or online showroom!",
     "checkout_header_image": "",
     "checkout_logo_image": "",
     "checkout_logo_position": "left",
