--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -180,7 +180,7 @@
     "bs4-btn-transition": "all .2s ease-in-out",
     "bs4-input-padding-x": ".75rem",
     "bs4-input-padding-y": ".5rem",
-    "bs4-input-line-height": "1.25",
+    "bs4-input-line-height": "1.0",
     "bs4-input-bg": "$white",
     "bs4-input-bg-disabled": "$gray-lighter",
     "bs4-input-color": "$gray",
@@ -634,6 +634,7 @@
     "apps_bold_loyalty_points": false,
     "apps_zapiet_store_pickup_and_delivery": false,
     "apps_wishlist_king_by_appmate": false,
+    "apps_back_in_stock_by_yellow_robot_pty_ltd": false,
     "show_account_message": true,
     "account_message_title": "Welcome to your account!",
     "account_message": "Here you will find the details of your orders, your deposited addresses and further information. We hope you enjoy or online showroom!",
