--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -147,7 +147,7 @@
     "bs4-btn-line-height": "1.25",
     "bs4-btn-font-weight": "$font-weight-normal",
     "bs4-btn-box-shadow": "inset 0 1px 0 rgba($white,.15), 0 1px 1px rgba($black,.075)",
-    "bs4-btn-focus-box-shadow": "0 0 0 2px rgba($brand-primary, .25)",
+    "bs4-btn-focus-box-shadow": "none",
     "bs4-btn-active-box-shadow": "inset 0 3px 5px rgba($black,.125)",
     "bs4-btn-primary-color": "$white",
     "bs4-btn-primary-bg": "$brand-primary",
