color-card-text

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -10,7 +10,7 @@
     "bs4-teal": "#5bc0de",
     "bs4-pink": "#ff5b77",
     "bs4-purple": "#613d7c",
-    "bs4-gray-dark": "#292b2c",
+    "bs4-gray-dark": "#262626",
     "bs4-gray": "#464a4c",
     "bs4-gray-light": "#636c72",
     "bs4-gray-lighter": "#dcdcdc",
@@ -45,7 +45,7 @@
     "bs4-spacers-y-5": "($spacer-y * 3)",
     "bs4-border-width": "1px",
     "bs4-body-bg": "$white",
-    "bs4-body-color": "$gray-dark",
+    "bs4-body-color": "$black",
     "bs4-inverse-bg": "$gray-dark",
     "bs4-inverse-color": "$gray-lighter",
     "bs4-link-color": "$brand-primary",
@@ -536,6 +536,8 @@
     "bs4-pre-color": "$gray-dark",
     "bs4-pre-border-color": "#ccc",
     "bs4-pre-scrollable-max-height": "340px",
+    "cart": false,
+    "money_with_currency": true,
     "home_instafeed_clientId": "31835d3fabe742fc8227998a8f924890",
     "home_instafeed_accessToken": "1752935354.31835d3.6f1bbea5f97a4ea59b6b92e3515874b2",
     "home_instafeed_get": "user",
