--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,8 @@
     "jquery": "^3.1.1",
     "jumplink-components": "JumpLinkNetwork/jumplink-components",
     "jquery.transit": "^0.9.12",
-    "instafeed.js": "^1.4.1"
+    "instafeed.js": "^1.4.1",
+    "platform.js": "bestiejs/platform.js#^1.3.3"
   },
   "resolutions": {
     "jquery": "1.9.1 - 3",
