Don't see locked products

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -351,8 +351,8 @@
     "bs4-pagination-hover-color": "$black",
     "bs4-pagination-hover-bg": "$white",
     "bs4-pagination-hover-border": "#ddd",
-    "bs4-pagination-active-color": "$white",
-    "bs4-pagination-active-bg": "$brand-primary",
+    "bs4-pagination-active-color": "$black",
+    "bs4-pagination-active-bg": "$white",
     "bs4-pagination-active-border": "$brand-primary",
     "bs4-pagination-disabled-color": "$gray-light",
     "bs4-pagination-disabled-bg": "$white",
@@ -625,7 +625,7 @@
     "about-us_carousel_waitForAnimate": false,
     "collections_per_page": 50,
     "collections_aspect_ratio": "ratio-1-2",
-    "products_per_page": 50,
+    "products_per_page": 3,
     "products_aspect_ratio": "ratio-1-2",
     "products_show_vendor": true,
     "products_show_title": false,
