--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,6 @@
     "bootstrap-backward": "JumpLinkNetwork/bootstrap-backward#v4-0-0-alpha-5-scss-backward",
     "sass-autoprefixer": "^1.0.1",
     "video.js": "^5.13.2",
-    "async": "^2.1.4",
     "shopify-cartjs": "^0.4.0",
     "bootstrap-treeview": "^1.2.0",
     "bootstrap-select": "^1.12.1",
@@ -40,14 +39,15 @@
     "rivets": "^0.9.6",
     "gsap": "^1.19.0",
     "barba.js": "luruke/barba.js#^1.0.0",
-    "jquery": "^3.1.1",
+    "jquery": "2",
     "jumplink-components": "JumpLinkNetwork/jumplink-components",
     "jquery.transit": "^0.9.12",
     "instafeed.js": "^1.4.1",
-    "platform.js": "bestiejs/platform.js#^1.3.3"
+    "platform.js": "bestiejs/platform.js#^1.3.3",
+    "async": "^2.1.4"
   },
   "resolutions": {
-    "jquery": "1.9.1 - 3",
+    "jquery": "3.1.1",
     "bootstrap-backward": "v4-0-0-alpha-5-scss-backward"
   }
 }
