--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -625,11 +625,12 @@
     "about-us_carousel_waitForAnimate": false,
     "collections_per_page": 50,
     "collections_aspect_ratio": "ratio-1-2",
-    "products_per_page": 3,
+    "products_per_page": 50,
     "products_aspect_ratio": "ratio-1-2",
     "products_show_vendor": true,
     "products_show_title": false,
     "products_show_price": false,
+    "products_hover_image": false,
     "apps_jumplink_product_videos": false,
     "apps_jumplink_exclusive_collections": true,
     "apps_powertools_filter_menu": false,
