--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -69,7 +69,7 @@
     "bs4-grid-gutter-widths-md": "$grid-gutter-width-base",
     "bs4-grid-gutter-widths-lg": "$grid-gutter-width-base",
     "bs4-grid-gutter-widths-xl": "$grid-gutter-width-base*1.6",
-    "bs4-font-family-sans-serif": "\"Avant Garde\", Avantgarde, \"Century Gothic\", CenturyGothic, \"Apple Gothic\", AppleGothic, \"URW Gothic L\", Futura, -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial, sans-serif",
+    "bs4-font-family-sans-serif": "'Kanit', sans-serif",
     "bs4-font-family-serif": "Georgia, \"Times New Roman\", Times, serif",
     "bs4-font-family-monospace": "Menlo, Monaco, Consolas, \"Liberation Mono\", \"Courier New\", monospace",
     "bs4-font-family-base": "$font-family-sans-serif",
@@ -79,7 +79,7 @@
     "bs4-font-size-sm": ".875rem",
     "bs4-font-size-xs": ".75rem",
     "bs4-font-weight-normal": "300",
-    "bs4-font-weight-bold": "bold",
+    "bs4-font-weight-bold": "600",
     "bs4-font-weight-base": "$font-weight-normal",
     "bs4-line-height-base": "1.5",
     "bs4-font-size-h1": "2.5rem",
@@ -90,7 +90,7 @@
     "bs4-font-size-h6": "1rem",
     "bs4-headings-margin-bottom": "($spacer \/ 2)",
     "bs4-headings-font-family": "inherit",
-    "bs4-headings-font-weight": "500",
+    "bs4-headings-font-weight": "$font-weight-bold",
     "bs4-headings-line-height": "1.1",
     "bs4-headings-color": "inherit",
     "bs4-display1-size": "6rem",
@@ -120,7 +120,7 @@
     "bs4-list-inline-padding": "5px",
     "bs4-line-height-lg": "(4 \/ 3)",
     "bs4-line-height-sm": "1.5",
-    "bs4-border-radius": ".25rem",
+    "bs4-border-radius": "0",
     "bs4-border-radius-lg": ".3rem",
     "bs4-border-radius-sm": ".2rem",
     "bs4-component-active-color": "$white",
@@ -536,7 +536,7 @@
     "bs4-pre-color": "$gray-dark",
     "bs4-pre-border-color": "#ccc",
     "bs4-pre-scrollable-max-height": "340px",
-    "cart": false,
+    "cart": true,
     "money_with_currency": true,
     "home_instafeed_clientId": "31835d3fabe742fc8227998a8f924890",
     "home_instafeed_accessToken": "1046245675.1677ed0.3c0b3197542c48169610a9d7c0eba969",
@@ -548,7 +548,7 @@
     "home_instafeed_limit": 3,
     "home_instafeed_sortBy": "none",
     "home_instagram_follow_link": "https:\/\/www.instagram.com\/studiopezzetta\/",
-    "about-us_carousel_item_1_active": true,
+    "about-us_carousel_item_1_active": false,
     "about-us_carousel_item_1_href": "",
     "about-us_carousel_item_1_title": "",
     "about-us_carousel_item_1_text": "",
@@ -560,7 +560,7 @@
     "about-us_carousel_item_2_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
     "about-us_carousel_item_2_text_position": "bottom right",
     "about-us_carousel_item_2_text_color": "black",
-    "about-us_carousel_item_3_active": true,
+    "about-us_carousel_item_3_active": false,
     "about-us_carousel_item_3_href": "",
     "about-us_carousel_item_3_title": "",
     "about-us_carousel_item_3_text": "",
@@ -638,9 +638,19 @@
     "apps_zapiet_store_pickup_and_delivery": false,
     "apps_wishlist_king_by_appmate": false,
     "apps_back_in_stock_by_yellow_robot_pty_ltd": false,
-    "show_account_message": true,
-    "account_message_title": "Welcome to your account!",
-    "account_message": "Here you will find the details of your orders, your deposited addresses and further information. We hope you enjoy or online showroom!",
+    "alertify-box-shadow": "0 2px 5px 0 rgba(0,0,0,.2)",
+    "alertify-padding-base": "$spacer",
+    "alertify-text-color": "$black",
+    "alertify-border-radius": "$border-radius",
+    "alertify-success-color": "$white",
+    "alertify-success-text-color": "$alertify-text-color",
+    "alertify-danger-color": "$brand-danger",
+    "alertify-danger-text-color": "$alertify-text-color",
+    "alertify_position": "top right",
+    "alertify-top-spacer": "50px",
+    "alertify-right-spacer": "16px",
+    "alertify-bottom-spacer": "16px",
+    "alertify-left-spacer": "16px",
     "checkout_header_image": "",
     "checkout_logo_image": "",
     "checkout_logo_position": "left",
@@ -655,6 +665,9 @@
     "checkout_accent_color": "#1990C6",
     "checkout_button_color": "#1990C6",
     "checkout_error_color": "#ff6d6d",
+    "show_account_message": true,
+    "account_message_title": "Welcome to your account!",
+    "account_message": "Here you will find the details of your orders, your deposited addresses and further information. We hope you enjoy or online showroom!",
     "content_for_index": []
   }
 }
