changeable images in footer and navbar

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -69,16 +69,16 @@
     "bs4-grid-gutter-widths-md": "$grid-gutter-width-base",
     "bs4-grid-gutter-widths-lg": "$grid-gutter-width-base",
     "bs4-grid-gutter-widths-xl": "$grid-gutter-width-base*1.6",
-    "bs4-font-family-sans-serif": "'Kanit', sans-serif",
+    "bs4-font-family-sans-serif": "'Fira Sans Condensed', sans-serif",
     "bs4-font-family-serif": "Georgia, \"Times New Roman\", Times, serif",
     "bs4-font-family-monospace": "Menlo, Monaco, Consolas, \"Liberation Mono\", \"Courier New\", monospace",
     "bs4-font-family-base": "$font-family-sans-serif",
-    "bs4-font-size-root": "15px",
+    "bs4-font-size-root": "16px",
     "bs4-font-size-base": "1rem",
     "bs4-font-size-lg": "1.25rem",
     "bs4-font-size-sm": ".875rem",
     "bs4-font-size-xs": ".75rem",
-    "bs4-font-weight-normal": "300",
+    "bs4-font-weight-normal": "400",
     "bs4-font-weight-bold": "600",
     "bs4-font-weight-base": "$font-weight-normal",
     "bs4-line-height-base": "1.5",
@@ -624,9 +624,9 @@
     "about-us_carousel_rtl": false,
     "about-us_carousel_waitForAnimate": false,
     "collections_per_page": 50,
-    "collections_aspect_ratio": "ratio-1-2",
+    "collections_aspect_ratio": "ratio-10-17",
     "products_per_page": 50,
-    "products_aspect_ratio": "ratio-1-2",
+    "products_aspect_ratio": "ratio-10-17",
     "products_show_vendor": true,
     "products_show_title": false,
     "products_show_price": false,
@@ -652,18 +652,18 @@
     "alertify-bottom-spacer": "16px",
     "alertify-left-spacer": "16px",
     "checkout_header_image": "",
-    "checkout_logo_image": "",
+    "checkout_logo_image": "shopify:\/\/shop_images\/Logo-Pezetta_2017.png",
     "checkout_logo_position": "left",
-    "checkout_logo_size": "medium",
+    "checkout_logo_size": "small",
     "checkout_body_background_image": "",
     "checkout_body_background_color": "#fff",
     "checkout_input_background_color_mode": "white",
     "checkout_sidebar_background_image": "",
-    "checkout_sidebar_background_color": "#fafafa",
+    "checkout_sidebar_background_color": "#ffffff",
     "checkout_heading_font": "Helvetica Neue",
     "checkout_body_font": "Helvetica Neue",
-    "checkout_accent_color": "#1990C6",
-    "checkout_button_color": "#1990C6",
+    "checkout_accent_color": "#000000",
+    "checkout_button_color": "#000000",
     "checkout_error_color": "#ff6d6d",
     "show_account_message": true,
     "account_message_title": "Welcome to your account!",
