Do not hide parts from Colorcard, some changes from shopify backend

--- a/theme/config/settings_data.json
+++ b/theme/config/settings_data.json
@@ -69,7 +69,7 @@
     "bs4-grid-gutter-widths-md": "$grid-gutter-width-base",
     "bs4-grid-gutter-widths-lg": "$grid-gutter-width-base",
     "bs4-grid-gutter-widths-xl": "$grid-gutter-width-base*1.6",
-    "bs4-font-family-sans-serif": "'Fira Sans Condensed', sans-serif",
+    "bs4-font-family-sans-serif": "'GT-Walsheim', sans-serif",
     "bs4-font-family-serif": "Georgia, \"Times New Roman\", Times, serif",
     "bs4-font-family-monospace": "Menlo, Monaco, Consolas, \"Liberation Mono\", \"Courier New\", monospace",
     "bs4-font-family-base": "$font-family-sans-serif",
@@ -554,10 +554,10 @@
     "about-us_carousel_item_1_text": "",
     "about-us_carousel_item_1_text_position": "bottom right",
     "about-us_carousel_item_1_text_color": "black",
-    "about-us_carousel_item_2_active": false,
+    "about-us_carousel_item_2_active": true,
     "about-us_carousel_item_2_href": "",
-    "about-us_carousel_item_2_title": "Ebesidii sedi",
-    "about-us_carousel_item_2_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
+    "about-us_carousel_item_2_title": "",
+    "about-us_carousel_item_2_text": "",
     "about-us_carousel_item_2_text_position": "bottom right",
     "about-us_carousel_item_2_text_color": "black",
     "about-us_carousel_item_3_active": false,
@@ -568,27 +568,27 @@
     "about-us_carousel_item_3_text_color": "black",
     "about-us_carousel_item_4_active": false,
     "about-us_carousel_item_4_href": "",
-    "about-us_carousel_item_4_title": "Ebesidii sedi",
-    "about-us_carousel_item_4_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
+    "about-us_carousel_item_4_title": "",
+    "about-us_carousel_item_4_text": "",
     "about-us_carousel_item_4_text_position": "bottom right",
     "about-us_carousel_item_4_text_color": "black",
     "about-us_carousel_item_5_active": false,
     "about-us_carousel_item_5_href": "",
-    "about-us_carousel_item_5_title": "Ebesidii sedi",
-    "about-us_carousel_item_5_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
+    "about-us_carousel_item_5_title": "",
+    "about-us_carousel_item_5_text": "",
     "about-us_carousel_item_5_text_position": "bottom right",
     "about-us_carousel_item_5_text_color": "black",
     "about-us_carousel_item_6_active": false,
     "about-us_carousel_item_6_href": "",
-    "about-us_carousel_item_6_title": "Ebesidii sedi",
-    "about-us_carousel_item_6_text": "Ebesidii sedi, dienia or quem perides nonsuliam ala nequam simuro es facene eris consulocres.",
+    "about-us_carousel_item_6_title": "",
+    "about-us_carousel_item_6_text": "",
     "about-us_carousel_item_6_text_position": "bottom right",
     "about-us_carousel_item_6_text_color": "black",
     "about-us_carousel_with_aspect_ratio": true,
-    "about-us_carousel_aspect_ratio": "ratio-3-10",
+    "about-us_carousel_aspect_ratio": "ratio-2-1",
     "about-us_carousel_accessibility": true,
     "about-us_carousel_adaptiveHeight": false,
-    "about-us_carousel_autoplay": false,
+    "about-us_carousel_autoplay": true,
     "about-us_carousel_autoplaySpeed": 3000,
     "about-us_carousel_arrows": true,
     "about-us_carousel_centerMode": false,
@@ -596,7 +596,7 @@
     "about-us_carousel_cssEase": "linear",
     "about-us_carousel_dots": false,
     "about-us_carousel_draggable": true,
-    "about-us_carousel_fade": false,
+    "about-us_carousel_fade": true,
     "about-us_carousel_focusOnSelect": false,
     "about-us_carousel_easing": "linear",
     "about-us_carousel_edgeFriction": "0.15",
@@ -611,7 +611,7 @@
     "about-us_carousel_slidesPerRow": 1,
     "about-us_carousel_slidesToShow": 1,
     "about-us_carousel_slidesToScroll": 1,
-    "about-us_carousel_speed": 300,
+    "about-us_carousel_speed": 500,
     "about-us_carousel_swipe": true,
     "about-us_carousel_swipeToSlide": false,
     "about-us_carousel_touchMove": true,
