--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jumplink-shopify-boilerplate",
-  "version": "0.0.2",
-  "description": "Shopify theme framework based on Bootstrap 4",
+  "name": "art-code-studio-shopify-theme",
+  "version": "0.0.3",
+  "description": "Shopify theme based on Bootstrap 4",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JumpLinkNetwork/jumplink-shopify-boilerplate.git"
+    "url": "https://git.mediamor.de/jumplink.eu/art-code-studio-shopify-theme"
   },
   "keywords": [
     "JumpLink",
@@ -20,9 +20,9 @@
   "author": "Pascal Garber <pascal@jumplink.eu>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/JumpLinkNetwork/jumplink-shopify-boilerplate/issues"
+    "url": "https://git.mediamor.de/jumplink.eu/art-code-studio-shopify-theme/issues"
   },
-  "homepage": "https://github.com/JumpLinkNetwork/jumplink-shopify-boilerplate#readme",
+  "homepage": "https://art-code-studio.myshopify.com",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
