--- a/bower.json
+++ b/bower.json
@@ -43,8 +43,8 @@
     "instafeed.js": "^1.4.1",
     "platform.js": "bestiejs/platform.js#^1.3.3",
     "async": "^2.1.4",
-    "Morphext": "^2.4.4",
-    "animate-sass": "^0.6.6"
+    "jquery-touch-events": "^1.0.9",
+    "animate.css": "^3.5.2"
   },
   "resolutions": {
     "jquery": "3.2.1"
