--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "sass-autoprefixer": "^1.0.1",
     "video.js": "^5.13.2",
     "shopify-cartjs": "^0.4.0",
-    "slick-carousel": "^1.6.0",
+    "slick-carousel": "^1.8.1",
     "simpler-sidebar": "^2.2.0",
     "alertifyjs": "^1.0.11",
     "sightglass": "^0.2.6",
@@ -44,7 +44,8 @@
     "platform.js": "bestiejs/platform.js#^1.3.3",
     "async": "^2.1.4",
     "jquery-touch-events": "^1.0.9",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "visionmedia-debug": "^3.1.0"
   },
   "resolutions": {
     "jquery": "3.2.1"
